fixed screen overflow in mobile mode

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ img{
 
 .full-page{
     height: 100vh;
+    width: 100%;
     background-image: linear-gradient(rgb(7, 0, 0),rgba(219, 197, 197, 0.288)), url("https://images.unsplash.com/photo-1547592180-85f173990554?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80");
     background-size: cover;
     background-repeat: no-repeat;
@@ -49,6 +50,7 @@ img{
     font-family: 'Architects Daughter', cursive;
     font-weight: 700;
     height: auto;
+    width: auto;
     display: flex;
     align-items: center;
     justify-content: center;
